--- a/index.html
+++ b/index.html
@@ -974,7 +974,9 @@
                                     layer.flush();
                                     editor.document.layers.ready();
                                     editor.document.history.save();
-                                } return false">
+                                } return false"
+                                data-wc-sync-form="editor.temp.selectedLayer"
+                                >
                                 <div class="input-group">
                                     <span class="input-group-text justify-content-center" style="width:6em" >Size</span>
                                     <input class="form-control" type="number" name="width" placeholder="width" min="1" max="10000">
@@ -1040,7 +1042,7 @@
                 </div>
             </div>
         </div>
-        <script>
+        <!-- <script>
             window.addEventListener('load',(event)=>{
                 // window.modalLayer = new bootstrap.Modal('#modal-layer-config')
                 document.querySelector('#modal-layer-config').addEventListener('show.bs.modal', function(event){                   
@@ -1076,7 +1078,7 @@
                     UiInputStepper.initDataValue(this)
                 })
             })
-        </script>
+        </script> -->
 
 
         <div class="modal fade" id="modal-document-config"  aria-hidden="true">
